--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
 <p>NEWS</p>
 <div class="newscontainer">
 <div class="paragraph">対面説明会応募フォームは<a href="https://docs.google.com/forms/d/e/1FAIpQLSclxm2qaAjPRRUA55MydFYBVwnnfTI-fxwsibBX_OGSdzU8xg/viewform" target="_blank" rel="noreferrer noopener">こちら</a>から！</div>
-<!--3/26 12:00リリース
-  <div class="paragraph"><a>交流企画参加希望フォーム①受付開始！</a></div>
--->
+  <div class="paragraph"><a href="https://forms.gle/pdRU1GNTU27LgN5M9">交流企画参加希望フォーム①受付開始！</a></div>
 </div>
 </div>
 
@@ -69,15 +67,15 @@
 <!--TODO　飛ばすページのリンク挿入-->
 <div class="f-container">
 <div class="squarelinkpink">
-  <a href="" class="btn-pink btn-border-shadow btn-border-shadow--color">説明会</a>
+  <a href="pages/event.html#setumei" class="btn-pink btn-border-shadow btn-border-shadow--color">説明会</a>
 </div>
 
 <div class="squarelinkgreen">
-  <a href="" class="btn-green btn-border-shadow-green btn-border-shadow--color-green">ワセトーーーーク！！</a>
+  <a href="pages/event.html#talk" class="btn-green btn-border-shadow-green btn-border-shadow--color-green">ワセトーーーーク！！</a>
 </div>
 
 <div class="squarelinkyellow">
-  <a href="" class="btn-yellow btn-border-shadow-yellow btn-border-shadow--color-yellow">運スターツアーズ</a>
+  <a href="pages/event.html#tour" class="btn-yellow btn-border-shadow-yellow btn-border-shadow--color-yellow">運スターツアーズ</a>
 </div>
 </div>
 
@@ -85,15 +83,15 @@
 <!--TODO　飛ばすページのリンク挿入-->
 <div class="f-container">
 <div class="squarelinkpink">
-    <a href="" class="btn-pink btn-border-shadow btn-border-shadow--color">運スタミッケ</a>
+    <a href="pages/event.html#mikke" class="btn-pink btn-border-shadow btn-border-shadow--color">運スタミッケ</a>
 </div>
 
 <div class="squarelinkgreen">
-    <a href="" class="btn-green btn-border-shadow-green btn-border-shadow--color-green">運スタカウンセリング</a>
+    <a href="pages/event.html#counsil" class="btn-green btn-border-shadow-green btn-border-shadow--color-green">運スタカウンセリング</a>
 </div>
 
 <div class="squarelinkyellow">
-    <a href="" class="btn-yellow btn-border-shadow-yellow btn-border-shadow--color-yellow">運スタゼミナール</a>
+    <a href="pages/event.html#zemi" class="btn-yellow btn-border-shadow-yellow btn-border-shadow--color-yellow">運スタゼミナール</a>
 </div>
 </div>
 <!--早稲田祭とは-->
@@ -208,7 +206,7 @@
         rel="noopener noreferrer"
         ><img
           class="sns-link"
-          src="../static/img/twitter.png"
+          src="static/img/twitter.png"
           alt="twitterのリンク"
       /></a>
       <a
@@ -217,7 +215,7 @@
         rel="noopener noreferrer"
         ><img
           class="sns-link"
-          src="../static/img/instagram.png"
+          src="static/img/instagram.png"
           alt="instagramのリンク"
       /></a>
       <a
@@ -226,7 +224,7 @@
         rel="noopener noreferrer"
         ><img
           class="sns-link"
-          src="../static/img/youtube.png"
+          src="static/img/youtube.png"
           alt="youtubeのリンク"
       /></a>
       <a
@@ -235,13 +233,17 @@
         rel="noopener noreferrer"
         ><img
           class="sns-link"
-          src="../static/img/line.png"
+          src="static/img/line.png"
           alt="noteのリンク"
       /></a>
     </div>
   </div>
 </footer>
 <style>
+  .photocontainer{
+    width: 100%;
+    overflow: hidden;
+  }
   @media screen and (max-width: 1024px) {
   .topbody{
     background-color: #ffffff;
