--- a/pages/event.html
+++ b/pages/event.html
@@ -60,12 +60,12 @@
   <div class="section-title1">
     <img class="section1-img" src="../static/img/section1.png"
     />
-    <div class="section1-text">参加対応局</div>
+    <div class="section1-text">新歓イベント</div>
     </div>
 
   
   <div class="flex-container">
-    <div class="flex-children">
+    <div id="setumei" class="flex-children">
       <div class="block">
         <div class="blocktitle-navy">
         対面説明会
@@ -85,7 +85,7 @@
       <img src="../static/img/explanation.jpg" class="picture">
     </div>
 
-    <div class="flex-children">
+    <div id="tour" class="flex-children">
       <div class="block">
         <div class="blocktitle-pink">
           運スターツアーズ
@@ -118,7 +118,7 @@
 
 
   <div class="flex-container">
-    <div class="flex-children">
+    <div id="talk" class="flex-children">
       <div class="block">
         <div class="blocktitle-yellow">
           ワセトーーーーク！！
@@ -141,7 +141,7 @@
       <img src="../static/img/sinndan.jpg" class="picture">
     </div>
 
-    <div class="flex-children">
+    <div id="mikke" class="flex-children">
       <div class="block">
         <div class="blocktitle-green">
           運スタミッケ
@@ -168,7 +168,7 @@
   </div>
 
   <div class="flex-container">
-    <div class="flex-children">
+    <div id="zemi" class="flex-children">
       <div class="block">
         <div class="blocktitle-navy">
           運スタゼミナール
@@ -191,7 +191,7 @@
       <img src="../static/img/zemi.jpg" class="picture">
     </div>
 
-    <div class="flex-children">
+    <div id="counsil" class="flex-children">
       <div class="block">
         <div class="blocktitle-pink">
           運スタカウンセリング
@@ -380,6 +380,7 @@
   .flex-children{
     display: block;
     width:90%;
+    margin: 0 auto;
     margin-bottom:50px;
     padding-bottom:50px ;
   }
