--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <p>NEWS</p>
 <div class="newscontainer">
 <div class="paragraph">対面説明会応募フォームは<a href="https://docs.google.com/forms/d/e/1FAIpQLSclxm2qaAjPRRUA55MydFYBVwnnfTI-fxwsibBX_OGSdzU8xg/viewform" target="_blank" rel="noreferrer noopener">こちら</a>から！</div>
-  <div class="paragraph"><a href="https://forms.gle/pdRU1GNTU27LgN5M9">交流企画参加希望フォーム①受付開始！</a></div>
+  <div class="paragraph"><a href="pages/event.html#tour">交流企画参加希望フォーム①受付開始！</a></div>
 </div>
 </div>
 
@@ -445,7 +445,9 @@ animation-delay: 10s;
 }
 .section1-text{
     color:#08263a;
+    white-space: nowrap;
 }
+
 .toptext{
   text-align: center;
   padding: 2em;
