--- a/pages/event.html
+++ b/pages/event.html
@@ -75,9 +75,43 @@
       <th>1</th>
       </tr> 
       <tr class="events-setumei">
-        <td colspan="7"><a class="table-link" href="https://docs.google.com/forms/d/e/1FAIpQLSclxm2qaAjPRRUA55MydFYBVwnnfTI-fxwsibBX_OGSdzU8xg/viewform">対面説明会</a>
+        <td colspan="7" class="setumei-link"><a class="table-link" href="https://docs.google.com/forms/d/e/1FAIpQLSclxm2qaAjPRRUA55MydFYBVwnnfTI-fxwsibBX_OGSdzU8xg/viewform">対面説明会申し込み</a>
         </td>
-        </tr> 
+      </tr> 
+      <tr class="events-setumei">
+        <td colspan="6" class="tours-link"><a class="table-link" href="https://forms.gle/k18VyPJUVpRihqxc7">運スターツアーズ申し込み①</a>
+        </td>
+          <td class="tours-link tours-1"><a class="table-link" href="#"></a>
+        </td>
+      </tr> 
+      <tr class="events-setumei">
+        <td colspan="6" class="talk-link"><a class="table-link" href="https://forms.gle/VRGAqJidgRG8WnUK7">ワセトーーーーク！！申し込み①</a>
+        </td>
+          <td class="talk-link talk-1"><a class="table-link" href="#"></a>
+        </td>
+      </tr> 
+      <tr class="events-setumei">
+        <td colspan="6" class="mikke-link"><a class="table-link" href="https://forms.gle/ZfXxgY2ZJ28Basps8">運スタミッケ申し込み①</a>
+        </td>
+          <td class="mikke-link mikke-1"><a class="table-link" href="#"></a>      
+        </td>
+      </tr>
+      <tr class="events-setumei">
+        <td colspan="6" class="zemi-link"><a class="table-link" href="https://forms.gle/rA9MFnP6Nd98ZksE7">運スタゼミナール申し込み①</a>
+        <td class="zemi-link zemi-1"><a class="table-link" href="#"></a>
+        </td>
+      </tr>
+      <tr class="events-setumei">
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td class="counsil-link counsil-1"><a class="table-link" href="#"></a>
+        </td>
+      </tr>
+
       <tr class="day">
         <th>2</th>
         <th>3</th>
@@ -87,15 +121,51 @@
         <th>7</th>
         <th>8</th>
         </tr> 
-        <tr class="events">
+
+        <tr class="events-setumei">
+          <td colspan="2" class="setumei-link setumei-2"><a class="table-link" href="#"></a>
+          </td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
+        </tr> 
+        <tr class="events-setumei">
+          <td colspan="4" class="tours-link link-2"><a class="table-link" href="#">運スターツアーズ申し込み②</a>
+          </td>
           <td></td>
-          <td>1</td>
-          </tr> 
+          <td></td>
+          <td></td>
+        </tr> 
+        <tr class="events-setumei">
+          <td colspan="4" class="talk-link link-2 talk-text"><a class="table-link" href="#">ワセトーーーーク！！申し込み②</a>
+          <td></td>
+          <td></td>
+          <td></td>
+          </td>
+        </tr> 
+        <tr class="events-setumei">
+          <td colspan="4" class="mikke-link link-2"><a class="table-link" href="#">運スタミッケ申し込み②</a>      
+          </td>
+          <td></td>
+          <td></td>
+          <td></td>          
+        </tr>
+        <tr class="events-setumei">
+          <td colspan="4" class="zemi-link link-2"><a class="table-link" href="#">運スタゼミナール申し込み②</a>
+          </td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr class="events-setumei">
+          <td colspan="4" class="counsil-link link-2"><a class="table-link" href="#">運スタカウンセリング申し込み</a>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+
         <tr class="day">
           <th>9</th>
           <th>10</th>
@@ -112,7 +182,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td>1</td>
+            <td></td>
             </tr> 
           <tr class="day">
             <th>16</th>
@@ -130,7 +200,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td>1</td>
+            <td></td>
             </tr> 
           <tr class="day">
             <th>23</th>
@@ -148,7 +218,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td>1</td>
+            <td></td>
             </tr> 
           <tr class="day">
             <th>30</th>
@@ -166,7 +236,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td>1</td>
+            <td></td>
             </tr>          
 
     </table>
@@ -226,7 +296,7 @@
       </div>
       <div class="info1">場所</div>
       <div class="info">@学生会館</div>
-      <div class="info1">お申込みはこちら</div>
+      <div class="info1">お申込みは<a href="https://forms.gle/zZFXG3p18ZV1kF9p6">こちら</a></div>
       <img src="../static/img/tour.jpg" class="picture">
     </div>
   </div>
@@ -252,7 +322,7 @@
       </div> 
       <div class="info1">場所</div>
       <div class="info">@学生会館</div>
-      <div class="info1">お申込みはこちら</div>
+      <div class="info1">お申込みは<a href="https://forms.gle/529Yiq82dUi1zhk36">こちら</a></div>
       <img src="../static/img/sinndan.jpg" class="picture">
     </div>
 
@@ -277,7 +347,7 @@
       </div>
       <div class="info1">場所</div>
       <div class="info">@学生会館</div>
-      <div class="info1">お申込みはこちら</div>
+      <div class="info1">お申込みは<a href="https://forms.gle/5A7k724W2igGSSVc9">こちら</a></div>
       <img src="../static/img/mikke.jpg" class="picture">
     </div>
   </div>
@@ -302,7 +372,7 @@
       </div> 
       <div class="info1">場所</div>
       <div class="info">@学生会館</div>
-      <div class="info1">お申込みはこちら</div>
+      <div class="info1">お申込みは<a href="https://forms.gle/5A7k724W2igGSSVc9">こちら</a></div>
       <img src="../static/img/zemi.jpg" class="picture">
     </div>
 
@@ -514,15 +584,83 @@
 .week *:last-child {
   color: #6fb5ff;
 }
-.events-setumei td{
+.setumei-link{
   height: 5px;
   font-size: 5px;
   padding: 0;
   background-color: #77a9aa;
-  color: #FFF;
   border:2px solid #77a9aa;
+  border-radius:20px 0px 0px 20px ;
+
+}
+
+.setumei-2{
+  border-radius:0px 20px 20px 0px ;
+}
+
+.tours-link{
+  height: 5px;
+  font-size: 5px;
+  padding: 0;
+  background-color: #f46e74;
+  border:2px solid #f46e74;
   border-radius:20px;
 
+}
+
+.tours-1{
+  border-radius:20px 0px 0px 20px;
+}
+
+.talk-link{
+  height: 5px;
+  font-size: 5px;
+  padding: 0;
+  background-color: #117c6c;
+  border:2px solid #117c6c;
+  border-radius:20px;
+}
+.talk-1{
+  border-radius: 20px 0px 0px 20px;
+}
+
+.mikke-link{
+  height: 5px;
+  font-size: 5px;
+  padding: 0;
+  background-color: #f7d494;
+  border:2px solid #f7d494;
+  border-radius:20px;
+}
+
+.mikke-1{
+  border-radius:20px 0px 0px 20px;
+}
+
+.zemi-link{
+  height: 5px;
+  font-size: 5px;
+  padding: 0;
+  background-color: #f7c4c6;
+  border:2px solid #f7c4c6;
+  border-radius:20px;
+}
+
+.zemi-1{
+  border-radius: 20px 0px 0px 20px;
+}
+
+.counsil-link{
+  height: 5px;
+  font-size: 5px;
+  padding: 0;
+  background-color: #566c7D;
+  border:2px solid #566c7D;
+  border-radius:20px;
+}
+
+.counsil-1{
+  border-radius:20px 0px 0px 20px ;
 }
 
 .table-link{
@@ -533,7 +671,22 @@
   color: #FFF;
 }
 
+.link-2{
+  border-radius: 0px 20px 20px 0px;
+}
+
+.talk-text{
+  letter-spacing:-0.4px;
+}
+
   @media print, screen and (max-width: 1200px){
+
+  .calender{
+    width:80%;
+    margin: 0 auto;
+    margin-top: 40px;
+  }  
+
   .flex-container{
     display: block;
     width:90%;
@@ -555,9 +708,6 @@
   .scrollwindow{
     height: 10%;
   }
-
-
-
   }
 
   </style>
