--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <p>NEWS</p>
 <div class="newscontainer">
 <div class="paragraph">対面説明会応募フォームは<a href="https://docs.google.com/forms/d/e/1FAIpQLSclxm2qaAjPRRUA55MydFYBVwnnfTI-fxwsibBX_OGSdzU8xg/viewform" target="_blank" rel="noreferrer noopener">こちら</a>から！</div>
-  <div class="paragraph"><a href="https://forms.gle/pdRU1GNTU27LgN5M9">交流企画参加希望フォーム①受付開始！</a></div>
+<div class="paragraph"><a href="pages/event.html">交流企画参加希望フォーム①受付開始！</a></div>
 </div>
 </div>
 
@@ -564,6 +564,7 @@ width:125px;
 }
 .section1-text{
 font-size:15px;
+white-space:nowrap;
 }
 .kuuhaku{
 display: none;
