--- a/index.html
+++ b/index.html
@@ -33,13 +33,17 @@
       <nav class="gnav">
           <div class="gnav__wrap">
               <ul class="gnav__menu">
-                  <li class="gnav__menu__item"><a href="#">Top</a></li>
-                  <li class="gnav__menu__item"><a href="pages/aboutus.html">運営スタッフとは</a></li>
-                  <li class="gnav__menu__item"><a href="pages/introduce.html">局紹介</a></li>
-                  <li class="gnav__menu__item"><a href="pages/howto.html">入会方法</a></li>
-                  <li class="gnav__menu__item"><a href="pages/event.html">新歓情報</a></li>
-                  <li class="gnav__menu__item"><a href="pages/contact.html">お問合せ</a></li>
-                  <li class="gnav__menu__item"><a href="pages/photogallery.html">運スタ写真館</a></li>
+                <li class="gnav__menu__item"><a href="index.html">Top</a></li>
+                <li class="gnav__menu__item"><a href="pages/aboutus.html">運営スタッフとは</a></li>
+                <li class="gnav__menu__item"><a href="pages/aboutfes.html">早稲田祭とは</a></li>
+                <li class="gnav__menu__item"><a href="pages/aboutstaff.html">スタッフの内情</a></li>
+                <li class="gnav__menu__item"><a href="pages/aboutfes.html">局紹介</a></li>
+                <li class="gnav__menu__item"><a href="pages/overall.html">運営スタの全体像</a></li>
+                <li class="gnav__menu__item"><a href="pages/photogallery.html">運スタ写真館</a></li>
+                <li class="gnav__menu__item"><a href="pages/howto.html">入会方法</a></li>
+                <li class="gnav__menu__item"><a href="pages/event.html">新歓情報</a></li>
+                <li class="gnav__menu__item"><a href="pages/question.html">よくある質問</a></li>
+                <li class="gnav__menu__item"><a href="pages/contact.html">お問合せについて</a></li>
               </ul>
           </div>
       </nav>
