--- a/pages/aboutstaff.html
+++ b/pages/aboutstaff.html
@@ -87,6 +87,7 @@
            </div>
           </div>
 </div>
+
 <div class="anketochild">
       <div class="grafcontainer">
               <img src="../static/img/shusshin.png" class="grafchild">
@@ -103,6 +104,7 @@
                    </div>
                   </div>
 </div>
+
 <div class="anketochild">
       <div class="grafcontainer">
               <img src="../static/img/baitohindo.png" class="grafchild">
@@ -131,6 +133,7 @@
           </div>
     </div>
   </div>
+
   <div class="anketochild">
     <div class="grafcontainer">
       <img src="../static/img/koibito.png" class="grafchild">
@@ -163,6 +166,7 @@
      </div>
     </div>
 </div>
+
 <div class="interviewchildwaa">
   <div class="blocktitle-pink">
     早稲田祭2023代表　佐溝眞行
@@ -171,6 +175,7 @@
   <div class="paragraph">Q1.なぜ運スタに入会したのか教えてください！</div>
   <div class="paragraph">A1.運スタや早稲田祭について知ったのは、寮の先輩から教わったことがきっかけです。高校でやった学園祭の実行委員が楽しかったので大学でもやりたいと思い、入会を決めました。
   </div>
+  
   <div class="paragraph">
     Q2.早稲田祭にかける熱い想いを教えてください。
   </div>
@@ -193,7 +198,6 @@
   <img src="../static/img/interviewsammy.JPG">
 </div>
 
-<div class="interviewparent">
 <div class="interviewcontainer">
   <div class="interviewchild">
     <div class="blocktitle-pink">
@@ -278,6 +282,9 @@
     <img src="../static/img/interviewryouta.JPG">
   </div>
 </div>
+</div>
+
+
   <div class="interviewcontainer">
   <div class="interviewchild">
     <div class="blocktitle-pink">
@@ -359,6 +366,7 @@
   </div>
 </div>
 </div>
+
 <footer class="footer">
   <div class="footer-inner">
     <div class="footer-body">
@@ -472,10 +480,6 @@
   justify-content: center;
 }
 
-.interviewparent{
-  display: flex;
-  flex-direction: column;
-}
 .interviewcontainer{
   display: flex;
   flex-direction: row;
