--- a/pages/aboutstaff.html
+++ b/pages/aboutstaff.html
@@ -206,32 +206,32 @@
     <div class="sukima"></div>
     <div class="paragraph">Q1.なぜ運スタに入会したのか教えてください！</div>
     <div class="paragraph">
-      A1.入会の動機として結構多いと思うんですが、イベントを運営するのが好きだからです！ 中高でも生徒会をしていて、運営する側の楽しさを知ってしまっていたので、迷わず入会しました。実際は中高の生徒会よりも大きな組織で大きな事をしていてびっくりした。
+      A1.入会の動機として結構多いと思うんですが、イベントを運営するのが好きだからです！</br>中高でも生徒会をしていて、運営する側の楽しさを知ってしまっていたので、迷わず入会しました。</br>実際は中高の生徒会よりも大きな組織で大きな事をしていてびっくりした。
     </div>
     <div class="paragraph">
       Q2.運スタのやりがいを教えてください。
     </div>
     <div class="paragraph">
-      A2.自分の活動が誰かにとっての早稲田祭の素敵な思い出をつくっているということが、1年を通した活動の何よりのやりがいだと思います。だからこそ責任が伴うし忙しさもあるけれど、それは全て早稲田祭当日に報われると思っています。
-入会した時には想像もしなかったくらい早稲田のことも早稲田祭のことも運スタの仲間のことも大好きです。その気持ちが3年目の今のやりがいになっています！
+      A2.自分の活動が誰かにとっての早稲田祭の素敵な思い出をつくっているということが、</br>1年を通した活動の何よりのやりがいだと思います。</br>だからこそ責任が伴うし忙しさもあるけれど、それは全て早稲田祭当日に報われると思っています。</br>
+入会した時には想像もしなかったくらい早稲田のことも早稲田祭のことも運スタの仲間のことも大好きです。</br>その気持ちが3年目の今のやりがいになっています！
     </div>
     <div class="paragraph">
       Q3.今までの運スタの活動の中で1番楽しかったことを教えてください。
     </div>
     <div class="paragraph">
-      A3.来場者の方から感謝の言葉をもらったことです！コロナ禍によってさまざまな所でいろいろな制限をかけられ、「誰かと関わる機会」が大幅に失われました。充分な対策の下行われた21・22の早稲田祭でも大小さまざまな障壁がありましたが、「大変な状況の中、素敵な早稲田祭をありがとう」という言葉をたくさん頂きました！ 誰かからの「ありがとう」が1番嬉しいです！
+      A3.来場者の方から感謝の言葉をもらったことです！</br>コロナ禍によってさまざまな所でいろいろな制限をかけられ、「誰かと関わる機会」が大幅に失われました。</br>充分な対策の下行われた21・22の早稲田祭でも大小さまざまな障壁がありましたが、「大変な状況の中、素敵な早稲田祭をありがとう」という言葉をたくさん頂きました！ </br>誰かからの「ありがとう」が1番嬉しいです！
     </div>
     <div class="paragraph">
       Q4.入会する前に不安に思っていたことなどはありますか？
     </div>
     <div class="paragraph">
-      A4.私は沖縄出身でお盆と正月は絶対帰る主義！なのですが、運スタに入会してもガッツリ帰省できるかがとても不安でした。ただ実際は夏も冬もガッツリ帰省できました！！ 夏の忙しさは部署によっても違いますが、運スタには運スタ夏休みという期間が2週間ほどあります。みんなその期間を利用して旅行したり帰省したりしています！ 地方出身の人でガッツリ帰省したい派でも運スタはできます！
+      A4.私は沖縄出身でお盆と正月は絶対帰る主義！なのですが、運スタに入会してもガッツリ帰省できるかがとても不安でした。</br>ただ実際は夏も冬もガッツリ帰省できました！！ </br>夏の忙しさは部署によっても違いますが、運スタには運スタ夏休みという期間が2週間ほどあります。</br>みんなその期間を利用して旅行したり帰省したりしています！</br>地方出身の人でガッツリ帰省したい派でも運スタはできます！
     </div>
     <div class="paragraph">
       Q5.これから入会を考えている人にメッセージをお願いします！
     </div>
     <div class="paragraph">
-      A5.私にとって運スタは大学生になってできた1番の「居場所」です。約600名全員が、ただただ早稲田祭の開催と成功のために、約半年間の活動を行う、というのはよく考えるとすごいことです。そして、そんな運スタだからこそ生まれる絆が確かにあります。全力で遊ぶことや全力でサークル活動をすることなど、大学生の今しかできないことが運スタで経験できます。早稲田での充実した学生生活を祭と共に過ごしませんか？ これから入会を考えているみなさんにも、唯一無二の居場所を見つけて、唯一無二の楽しさを味わってみてほしいと思います。早稲田祭を共に背負うこの場所でお待ちしています！
+      A5.私にとって運スタは大学生になってできた1番の「居場所」です。</br>約600名全員が、ただただ早稲田祭の開催と成功のために、約半年間の活動を行う、というのはよく考えるとすごいことです。</br>そして、そんな運スタだからこそ生まれる絆が確かにあります。</br>全力で遊ぶことや全力でサークル活動をすることなど、大学生の今しかできないことが運スタで経験できます。</br>早稲田での充実した学生生活を祭と共に過ごしませんか？</br>これから入会を考えているみなさんにも、唯一無二の居場所を見つけて、唯一無二の楽しさを味わってみてほしいと思います。</br>早稲田祭を共に背負うこの場所でお待ちしています！
     </div>
     <div class="sukima"></div>
     <img src="../static/img/interviewkako.JPG">
@@ -243,40 +243,40 @@
     <div class="sukima"></div>
     <div class="paragraph">Q1.なぜ運スタに入会したのか教えてください！</div>
     <div class="paragraph">
-      A1.大学に入る前からただ遊ぶだけではなく何かにみんなで取り組めるサークルに入りたいと考えていたので、運スタを見つけた時はピッタリだと感じました。高校生の時にクラスでやった文化祭がとても楽しかったので、大学ではより規模が大きいものに取り組めるのではないかという期待が大きかったです。
-　また、早稲田大学という学生数がとても多い大学に入ったので、せっかくなら多くの人と友だちになりたいと考えました。そのため、早稲田の中で最大規模のサークルであり他のサークルとの関わりも深く持てる運スタに大きな魅力を感じ、入会を決めました。
+      A1.大学に入る前からただ遊ぶだけではなく何かにみんなで取り組めるサークルに入りたいと考えていたので、</br>運スタを見つけた時はピッタリだと感じました。</br>高校生の時にクラスでやった文化祭がとても楽しかったので、大学ではより規模が大きいものに取り組めるのではないかという期待が大きかったです。</br>
+　また、早稲田大学という学生数がとても多い大学に入ったので、せっかくなら多くの人と友だちになりたいと考えました。</br>そのため、早稲田の中で最大規模のサークルであり他のサークルとの関わりも深く持てる運スタに大きな魅力を感じ、入会を決めました。
     </div>
     <div class="paragraph">
       Q2.運スタのやりがいを教えてください。
     </div>
     <div class="paragraph">
-      A2.運営スタッフのやりがいは、半年間多くの人たちと共に頑張ってきた日々が祭当日にしっかり形となることだと思います。
-      運営スタッフの活動は長い時間をかけてチーム員や他部署のみんなと協力していくことで身を結ぶものばかりです。そのため、ずっと目指していたものが祭当日に実現した時のやりがいや喜びはとても大きいです。
-      実際に私は、早稲田祭でステージを建て、そこで多くの人々に早稲田文化を知ってもらうことを目標に掲げて活動してきました。祭までの長い準備期間の中で多くの人たちに助けられたり、参加団体・参加者の想いにも触れたりするなかで企画を無事に成功させた経験は、自分の中でとても良い思い出となりました。何よりもずっと一緒に頑張ってくれた人たちの喜ぶ姿を見れたことで、自分の活動の意義を確信できたと感じています。
-      　「誰かと共に何かを目指すことで生まれるやりがい」は、私にとってさまざまな活動に取り組む原動力の1つです。。そしてそれは、運営スタッフだからこそ感じられるやりがいだと考えています。運営スタッフには私が挙げた「やりがい」以外にもさまざまななやりがいを見つけられる環境があります。これから入会するみなさんとも、これからの活動の原動力となるやりがいを一緒に見つけていけたら嬉しいです。      
+      A2.運営スタッフのやりがいは、半年間多くの人たちと共に頑張ってきた日々が祭当日にしっかり形となることだと思います。</br>
+      運営スタッフの活動は長い時間をかけてチーム員や他部署のみんなと協力していくことで身を結ぶものばかりです。</br>そのため、ずっと目指していたものが祭当日に実現した時のやりがいや喜びはとても大きいです。</br>
+      実際に私は、早稲田祭でステージを建て、そこで多くの人々に早稲田文化を知ってもらうことを目標に掲げて活動してきました。</br>祭までの長い準備期間の中で多くの人たちに助けられたり、参加団体・参加者の想いにも触れたりするなかで企画を無事に成功させた経験は、自分の中でとても良い思い出となりました。</br>何よりもずっと一緒に頑張ってくれた人たちの喜ぶ姿を見れたことで、自分の活動の意義を確信できたと感じています。</br>
+      　「誰かと共に何かを目指すことで生まれるやりがい」は、私にとってさまざまな活動に取り組む原動力の1つです。</br>そしてそれは、運営スタッフだからこそ感じられるやりがいだと考えています。</br>運営スタッフには私が挙げた「やりがい」以外にもさまざまななやりがいを見つけられる環境があります。</br>これから入会するみなさんとも、これからの活動の原動力となるやりがいを一緒に見つけていけたら嬉しいです。      
     </div>
     <div class="paragraph">
       Q3.今までの運スタの活動の中で1番楽しかったことを教えてください。
     </div>
     <div class="paragraph">
-      A3.たくさんの嬉しい思い出を運スタでつくることができました。その中でもやはり当日に復活したステージの上でチーム員のみんなと集合写真を撮ったことはとても嬉しかったです！
-　昨年度は今まで中止を余儀なくされていたステージをもう一度復活させる事を目指して活動してきました。そのため、祭当日に本当にステージが復活したことやここまでチーム員が欠ける事なく当日を迎え集合写真を撮れたことに大きな喜びを感じました。
+      A3.たくさんの嬉しい思い出を運スタでつくることができました。</br>その中でもやはり当日に復活したステージの上でチーム員のみんなと集合写真を撮ったことはとても嬉しかったです！</br>
+　昨年度は今まで中止を余儀なくされていたステージをもう一度復活させる事を目指して活動してきました。</br>そのため、祭当日に本当にステージが復活したことやここまでチーム員が欠ける事なく当日を迎え集合写真を撮れたことに大きな喜びを感じました。
     <div class="paragraph">
       Q4.入会する前に不安に思っていたことなどはありますか？
     </div>
     <div class="paragraph">
-      A4.何でしょう？ 「パフォーマンスサークルで忙しくても運スタと両立できるのかな」とかですかね？ 私が実際に兼サーを悩んでいたわけではなく、友だちがという話ですが。実際に私の部署にもパフォサーと兼サーしながら運スタにコミットしている人がいました。比較的忙しいパフォサーでも運スタと兼サーすることは可能だと思います。
-      特に運スタには、私の部署のようにパフォサーなどの参加団体・参加者と深く関わる部署がいくつかあります。兼サーしている人にとっては、早稲田祭を参加者目線でも主催者目線でも楽しむことができるのは貴重な経験だと感じます。
-      また、人数が多いサークルだからこそ多様性を大事にしているため、兼サーに限らず自由度は高いです。
-      このように運スタは人数が多いぶんさまざまな人がいるため兼サーしている人にとっても良い居場所となると考えています。
+      A4.何でしょう？ 「パフォーマンスサークルで忙しくても運スタと両立できるのかな」とかですかね？ </br>私が実際に兼サーを悩んでいたわけではなく、友だちがという話ですが。</br>実際に私の部署にもパフォサーと兼サーしながら運スタにコミットしている人がいました。</br>比較的忙しいパフォサーでも運スタと兼サーすることは可能だと思います。</br>
+      特に運スタには、私の部署のようにパフォサーなどの参加団体・参加者と深く関わる部署がいくつかあります。</br>兼サーしている人にとっては、早稲田祭を参加者目線でも主催者目線でも楽しむことができるのは貴重な経験だと感じます。</br>
+      また、人数が多いサークルだからこそ多様性を大事にしているため、兼サーに限らず自由度は高いです。</br>
+      このように運スタは人数が多いぶんさまざまな人がいるため兼サーしている人にとっても良い居場所となると考えています。</br>
     </div>
     <div class="paragraph">
       Q5.これから入会を考えている人にメッセージをお願いします！
     </div>
     <div class="paragraph">
-      A5.とにかく運スタはとても楽しいです！ 私は入学当初、大学生活が少し不安だったのですが、運スタに入会し多くの友だちや大学生活を懸ける目標と出会い楽しい時間を送ることができました。
-      運スタは遊ぶだけではなく一緒に何かに取り組む事ができる場所でもあるため、大学生活で何かを目標にして頑張りたい人にはピッタリだと思います！
-      23新規のみなさんにとって運スタが大学生活の中で良い居場所となれれば嬉しいです。みなさんと一緒に活動できるのを楽しみにしています！
+      A5.とにかく運スタはとても楽しいです！ </br>私は入学当初、大学生活が少し不安だったのですが、運スタに入会し多くの友だちや大学生活を懸ける目標と出会い楽しい時間を送ることができました。</br>
+      運スタは遊ぶだけではなく一緒に何かに取り組む事ができる場所でもあるため、</br>大学生活で何かを目標にして頑張りたい人にはピッタリだと思います！</br>
+      23新規のみなさんにとって運スタが大学生活の中で良い居場所となれれば嬉しいです。</br>みなさんと一緒に活動できるのを楽しみにしています！
     </div>
     <div class="sukima"></div>
     <img src="../static/img/interviewryouta.JPG">
@@ -293,33 +293,33 @@
     <div class="sukima"></div>
     <div class="paragraph">Q1.なぜ運スタに入会したのか教えてください！</div>
     <div class="paragraph">
-      A1.入学が決まった時に、「せっかく日本でも有数の大学に入ったのだから、サークルを通して早稲田での大学生活を噛み締めたいな」と思ったのがきっかけです！ 大学生の時しかできないこと、早稲田大学そのものにコミットできるサークルを探していた時に出会ったのが「早稲田祭運営スタッフ」でした。1年をかけて大学行事である学園祭を自分の手でつくりあげることのできる運スタは、まさに自分が探していたサークルでした。その存在を見つけた瞬間に「運スタに入りたい！」と思いました。
+      A1.入学が決まった時に、「せっかく日本でも有数の大学に入ったのだから、サークルを通して早稲田での大学生活を噛み締めたいな」と思ったのがきっかけです！</br>大学生の時しかできないこと、早稲田大学そのものにコミットできるサークルを探していた時に出会ったのが「早稲田祭運営スタッフ」でした。</br>1年をかけて大学行事である学園祭を自分の手でつくりあげることのできる運スタは、まさに自分が探していたサークルでした。</br>その存在を見つけた瞬間に「運スタに入りたい！」と思いました。
     </div>
     <div class="paragraph">
       Q2.運スタのやりがいを教えてください。
     </div>
     <div class="paragraph">
-      A2.やはり、「祭の全てを学生の手でつくりあげることができる」ことにやりがいを感じています！ 運営スタッフは、企画やステージの運営はもちろん、当日の警備や動線、広報や協賛の獲得まで、その全てを自分たちで行っています。
-      　私が所属する渉外局地域チームは、大学周辺に暮らす地域の方々から祭へのご理解・ご協力を得るために日々活動し、早稲田祭の開催に貢献する役割を担っています。日々の活動は小さなものですが、30近いチームがそれぞれの役割を全うし、1つの祭をつくりあげています。そんな運スタでの日々は何ものにも代え難いと感じます！ これが私の思う運スタの「やりがい」です！！      
+      A2.やはり、「祭の全てを学生の手でつくりあげることができる」ことにやりがいを感じています！</br>運営スタッフは、企画やステージの運営はもちろん、当日の警備や動線、広報や協賛の獲得まで、その全てを自分たちで行っています。</br>
+      　私が所属する渉外局地域チームは、大学周辺に暮らす地域の方々から祭へのご理解・ご協力を得るために日々活動し、</br>早稲田祭の開催に貢献する役割を担っています。日々の活動は小さなものですが、30近いチームがそれぞれの役割を全うし、1つの祭をつくりあげています。</br>そんな運スタでの日々は何ものにも代え難いと感じます！</br>これが私の思う運スタの「やりがい」です！！      
     </div>
     <div class="paragraph">
       Q3.今までの運スタの活動の中で1番楽しかったことを教えてください。
     </div>
     <div class="paragraph">
-      A3.今までで1番うれしかったのは、地域の方が「いつもありがとう」と私たちに言ってくださったことです。これは、地域チームの活動の1つである「地域おそうじ」の実施後にいただいた言葉でした。多くの局やチームは早稲田祭本番の成功が重要であるのに対し、自分の所属している渉外局は日々の活動の積み重ねも当日と同じぐらい大切にしています。大学外部の方々と信頼関係を構築するための地道な活動はあまり目立たないという状況の中で、日々の活動は報われるのだと実感できた瞬間であり、活動の原動力が生まれた瞬間でもありました。この一言がとても嬉しかったです！
+      A3.今までで1番うれしかったのは、地域の方が「いつもありがとう」と私たちに言ってくださったことです。</br>これは、地域チームの活動の1つである「地域おそうじ」の実施後にいただいた言葉でした。</br>多くの局やチームは早稲田祭本番の成功が重要であるのに対し、自分の所属している渉外局は日々の活動の積み重ねも当日と同じぐらい大切にしています。</br>大学外部の方々と信頼関係を構築するための地道な活動はあまり目立たないという状況の中で、</br>日々の活動は報われるのだと実感できた瞬間であり、活動の原動力が生まれた瞬間でもありました。</br>この一言がとても嬉しかったです！
     </div>
     <div class="paragraph">
       Q4.入会する前に不安に思っていたことなどはありますか？
     </div>
     <div class="paragraph">
-      A4.学園祭の運営をしたことがない人でも活動できるのか不安に感じていました。もちろん「学園祭の運営なんてしたことがない！」という人でも運スタはできます！ 実際経験のなかった私でも、1年間運スタに没頭して活動を続けることができ、今はチーフという役職についています。経験がなくともしっかり活躍できる環境が運スタにはあります！ それは、たくさんの新規を受け入れる基盤や頼れる同期と先輩の存在があるからです。運スタの規模感や本格的な活動に臆することはありません！ その先に新しい自分が待っています！
+      A4.学園祭の運営をしたことがない人でも活動できるのか不安に感じていました。</br>もちろん「学園祭の運営なんてしたことがない！」という人でも運スタはできます！</br> 実際経験のなかった私でも、1年間運スタに没頭して活動を続けることができ、今はチーフという役職についています。</br>経験がなくともしっかり活躍できる環境が運スタにはあります！ </br>それは、たくさんの新規を受け入れる基盤や頼れる同期と先輩の存在があるからです。</br>運スタの規模感や本格的な活動に臆することはありません！</br>その先に新しい自分が待っています！
     </div>
     <div class="paragraph">
       Q5.これから入会を考えている人にメッセージをお願いします！
     </div>
     <div class="paragraph">
-      A5.ここまで運スタの魅力をお話ししてきましたが……ぜんっぜん語りきれていません！ インタビューだけでは語数に制限があるので仕方ないですね(笑)
-あとは自分の目で確かめてください！ 私も運スタに入る前には想像もしていなかった経験を今しています。素敵な同期や先輩に囲まれ、やりがいのある活動に没頭でき、日本一の大学で大学一のサークル活動にいそしんでいます。全ては「今しかできないこと」 迷っているなら入会希望を出しましょう！ そこをためらい、自分の可能性をなくしてしまうのは本当にもったいないです！ みなさんと一緒に活動できる日を楽しみに待っています！！
+      A5.ここまで運スタの魅力をお話ししてきましたが……ぜんっぜん語りきれていません！</br>インタビューだけでは語数に制限があるので仕方ないですね(笑)</br>
+あとは自分の目で確かめてください！</br>私も運スタに入る前には想像もしていなかった経験を今しています。</br>素敵な同期や先輩に囲まれ、やりがいのある活動に没頭でき、日本一の大学で大学一のサークル活動にいそしんでいます。</br>全ては「今しかできないこと」 迷っているなら入会希望を出しましょう！</br>そこをためらい、自分の可能性をなくしてしまうのは本当にもったいないです！</br>みなさんと一緒に活動できる日を楽しみに待っています！！
     </div>
     <div class="sukima"></div>
     <img src="../static/img/interviewkenshin.JPG">
@@ -331,32 +331,32 @@
     <div class="sukima"></div>
     <div class="paragraph">Q1.なぜ運スタに入会したのか教えてください！</div>
     <div class="paragraph">
-      A1.運スタにいる人って、元生徒会長とか、それこそ文化祭実行委員でした、みたいな人が一定数いるんです。なので、その時やってたことをまたやりたい！ っていう動機が多いと思うんですね。でも私はそうではなくて。何がきっかけで運スタを知ったのかはもう忘れちゃったんですけど、なんとなく「悪い人があんまりいなそう、素敵な友だちに出会えそう」っていう直感だけで選びました(笑) あとは、早稲田祭を創るという同じ目標を持って頑張る仲間ができるというのもすごく素敵だろうなと思ったのもあります。入会してみてその勘は当たっていたと断言できます！
+      A1.運スタにいる人って、元生徒会長とか、それこそ文化祭実行委員でした、みたいな人が一定数いるんです。</br>なので、その時やってたことをまたやりたい！ っていう動機が多いと思うんですね。</br>でも私はそうではなくて。</br>何がきっかけで運スタを知ったのかはもう忘れちゃったんですけど、なんとなく「悪い人があんまりいなそう、素敵な友だちに出会えそう」っていう直感だけで選びました(笑)</br>あとは、早稲田祭を創るという同じ目標を持って頑張る仲間ができるというのもすごく素敵だろうなと思ったのもあります。</br>入会してみてその勘は当たっていたと断言できます！
     </div>
     <div class="paragraph">
       Q2.運スタのやりがいを教えてください。
     </div>
     <div class="paragraph">
-      A2.私の所属している企画局OFEFチームは、Opening FestivalとEnding Festivalという、祭の開幕と閉幕を象徴する企画を担っています。他の企画局のチームもそうなのですが、たった1回、ほんの少しの時間のために何ヶ月もの間準備することになるんですね。私はそこに良さを感じていて、短い時間とはいえ目に見える形でゴールがあるというのはとても楽しいです！ またOpening FestivalとEnding Festivalは、多い時だと3500人ぐらいの観客の方が見る、とても注目度の高い企画です。その分責任もすごく感じますが、やりがいや達成感はすごく大きいです！
+      A2.私の所属している企画局OFEFチームは、Opening FestivalとEnding Festivalという、祭の開幕と閉幕を象徴する企画を担っています。</br>他の企画局のチームもそうなのですが、たった1回、ほんの少しの時間のために何ヶ月もの間準備することになるんですね。</br>私はそこに良さを感じていて、短い時間とはいえ目に見える形でゴールがあるというのはとても楽しいです！</br>またOpening FestivalとEnding Festivalは、多い時だと3500人ぐらいの観客の方が見る、とても注目度の高い企画です。</br>その分責任もすごく感じますが、やりがいや達成感はすごく大きいです！
     </div>
     <div class="paragraph">
       Q3.今までの運スタの活動の中で1番楽しかったことを教えてください。
     </div>
     <div class="paragraph">
-      A3.やはり、祭当日に企画が形になった瞬間や、出演団体・出演者の方のキラキラとした表情を見た時ですね。準備を進めていく中で、自分たちがやっていることが正解なのか、このまま良い企画をつくることができるのかと不安になることも多くありました。ですが本番のステージを見て、自分たちがやってきたことは間違いではなかったと感じることができて嬉しかったです。観客の方が涙を流しているのを見かけたときも嬉しかったですね！ 
-　本番中は連絡用のトランシーバーをつけていたり団体対応をしていたりで、正直しっかりと企画を見ることはできなかったんですけど、他部署の同期に「ここの演出感動した！」という連絡をもらえて疲れが吹き飛んだのも覚えています(笑)
+      A3.やはり、祭当日に企画が形になった瞬間や、出演団体・出演者の方のキラキラとした表情を見た時ですね。</br>準備を進めていく中で、自分たちがやっていることが正解なのか、このまま良い企画をつくることができるのかと不安になることも多くありました。</br>ですが本番のステージを見て、自分たちがやってきたことは間違いではなかったと感じることができて嬉しかったです。</br>観客の方が涙を流しているのを見かけたときも嬉しかったですね！</br>
+　本番中は連絡用のトランシーバーをつけていたり団体対応をしていたりで、</br>正直しっかりと企画を見ることはできなかったんですけど、他部署の同期に「ここの演出感動した！」という連絡をもらえて疲れが吹き飛んだのも覚えています(笑)
     </div>
     <div class="paragraph">
       Q4.入会する前に不安に思っていたことなどはありますか？
     </div>
     <div class="paragraph">
-      A4.初めは人数の多いサークルなので、馴染めるのか心配でした。私は文系だし兼サーもしていないので…... 馴染めなかったらどうしようと思っていました。ですが私のチームのみんなはすごく多様で、所沢キャンパスに通ってる同期もいるし、色々あって今年24歳になった同期もいます！ そんな個性的な人たちがたくさんいる中で全員がチームに馴染んでいます。運スタ全体を見ても、どんな人でも分かり合おうとする心さえあれば居場所ができるなっていうのは感じています！ あと伝えたいのは、朝起きるのが苦手でも大丈夫(笑) 運スタは基本早起きが苦手な人が多いので、ミーティングも夜になることが多いです！！
+      A4.初めは人数の多いサークルなので、馴染めるのか心配でした。私は文系だし兼サーもしていないので……</br>馴染めなかったらどうしようと思っていました。</br>ですが私のチームのみんなはすごく多様で、所沢キャンパスに通ってる同期もいるし、色々あって今年24歳になった同期もいます！</br>そんな個性的な人たちがたくさんいる中で全員がチームに馴染んでいます。</br>運スタ全体を見ても、どんな人でも分かり合おうとする心さえあれば居場所ができるなっていうのは感じています！</br>あと伝えたいのは、朝起きるのが苦手でも大丈夫(笑) 運スタは基本早起きが苦手な人が多いので、ミーティングも夜になることが多いです！！
     </div>
     <div class="paragraph">
       Q5.これから入会を考えている人にメッセージをお願いします！
     </div>
     <div class="paragraph">
-      A5.私は運スタに入って、それまで見たことのないような素晴らしい景色を見ることができました。友だちもたくさんできたし、運スタに入っていなかったら出会わないような人とたくさん出会うことができました。コロナ渦でさまざまな制限がかけられた祭から、徐々にそれ以前の、それまで以上の祭に形を変えようとしている早稲田祭を創るのは最高に楽しいはずです！ みなさんと会えるのを楽しみにしています！
+      A5.私は運スタに入って、それまで見たことのないような素晴らしい景色を見ることができました。</br>友だちもたくさんできたし、運スタに入っていなかったら出会わないような人とたくさん出会うことができました。</br>コロナ渦でさまざまな制限がかけられた祭から、徐々にそれ以前の、それまで以上の祭に形を変えようとしている早稲田祭を創るのは最高に楽しいはずです！</br>みなさんと会えるのを楽しみにしています！
     </div>
     <div class="paragraph">
       局について詳しく知りたい方は<a href="introduce.html">こちら</a>をご覧ください！
@@ -483,15 +483,18 @@
 .interviewcontainer{
   display: flex;
   flex-direction: row;
-  width: 100%;
+  width: 90%;
   justify-content: space-around;
   text-align: center;
+  margin: 0 auto;
 }
 .interviewchild{
   border:3px solid #77a9aa;
   border-radius: 20px;
   text-align: center;
   padding: 1em;
+  width: 45%;
+  margin-bottom: 30px;
 }
 
 .interviewchild img{
@@ -503,8 +506,10 @@
   border:3px solid #77a9aa;
   border-radius: 20px;
   text-align: center;
+  margin: 0 auto;
   padding: 1em;
-  margin-bottom: 500px;
+  margin-bottom: 30px;
+  width:90%;
 }
 
 .interviewchildwaa img{
@@ -520,6 +525,23 @@
  }
 .sukima{
   height: 10px;
+}
+
+@media screen and (max-width: 1024px){
+  .anketochild{
+    flex-direction: column;
+  }
+
+  .grafchild{
+    padding-right: 1em;
+    padding-left: 1em;
+  }
+
+  .anketochild img{
+  margin: 0 auto;
+  width: 400px;
+  height: 300px;
+}
 }
 </style>
 </body>
