--- a/pages/event.html
+++ b/pages/event.html
@@ -101,7 +101,7 @@
         </td>
       </tr>
       <tr class="events-setumei">
-        <td colspan="6" class="zemi-link"><a class="table-link" href="https://forms.gle/rA9MFnP6Nd98ZksE7">運スタゼミナール申し込み①</a>
+        <td colspan="6" class="zemi-link"><a class="table-link" href="https://forms.gle/fHnQ5ou3B4mLg8SZ6">運スタゼミナール申し込み①</a>
         <td class="zemi-link zemi-1"><a class="table-link" href="#"></a>
         </td>
       </tr>
@@ -376,7 +376,7 @@
       </div> 
       <div class="info1">場所</div>
       <div class="info">@学生会館</div>
-      <div class="info1">お申込みは<a href="https://forms.gle/5A7k724W2igGSSVc9">こちら</a></div>
+      <div class="info1">お申込みは<a href="https://forms.gle/fHnQ5ou3B4mLg8SZ6">こちら</a></div>
       <img src="../static/img/zemi.jpg" class="picture">
     </div>
 
