--- a/pages/event.html
+++ b/pages/event.html
@@ -270,7 +270,7 @@
       </div> 
       <div class="info1">場所</div>
       <div class="info">@学生会館</div>
-      <div class="info1">お申込みは<a href="https://docs.google.com/forms/d/e/1FAIpQLSclxm2qaAjPRRUA55MydFYBVwnnfTI-fxwsibBX_OGSdzU8xg/viewform">こちら</a></div>
+      <div class="info1">お申し込みは<a href="https://docs.google.com/forms/d/e/1FAIpQLSclxm2qaAjPRRUA55MydFYBVwnnfTI-fxwsibBX_OGSdzU8xg/viewform">こちら</a></div>
       <img src="../static/img/explanation.jpg" class="picture">
     </div>
 
@@ -297,7 +297,7 @@
       </div>
       <div class="info1">場所</div>
       <div class="info">@学生会館</div>
-      <div class="info1">お申込みは<a href="https://forms.gle/zZFXG3p18ZV1kF9p6">こちら</a></div>
+      <div class="info1">お申し込みは<a href="https://forms.gle/zZFXG3p18ZV1kF9p6">こちら</a></div>
       <img src="../static/img/tour.jpg" class="picture">
     </div>
   </div>
@@ -323,7 +323,7 @@
       </div> 
       <div class="info1">場所</div>
       <div class="info">@学生会館</div>
-      <div class="info1">お申込みは<a href="https://forms.gle/529Yiq82dUi1zhk36">こちら</a></div>
+      <div class="info1">お申し込みは<a href="https://forms.gle/529Yiq82dUi1zhk36">こちら</a></div>
       <img src="../static/img/sinndan.jpg" class="picture">
     </div>
 
@@ -348,7 +348,7 @@
       </div>
       <div class="info1">場所</div>
       <div class="info">@学生会館</div>
-      <div class="info1">お申込みは<a href="https://forms.gle/5A7k724W2igGSSVc9">こちら</a></div>
+      <div class="info1">お申し込みは<a href="https://forms.gle/5A7k724W2igGSSVc9">こちら</a></div>
       <img src="../static/img/mikke.jpg" class="picture">
     </div>
   </div>
@@ -373,7 +373,7 @@
       </div> 
       <div class="info1">場所</div>
       <div class="info">@学生会館</div>
-      <div class="info1">お申込みは<a href="https://forms.gle/fHnQ5ou3B4mLg8SZ6">こちら</a></div>
+      <div class="info1">お申し込みは<a href="https://forms.gle/fHnQ5ou3B4mLg8SZ6">こちら</a></div>
       <img src="../static/img/zemi.jpg" class="picture">
     </div>
 
@@ -398,7 +398,7 @@
       </div>
       <div class="info1">場所</div>
       <div class="info">@学生会館</div>
-      <div class="info1">お申込みはこちら</div>
+      <div class="info1">お申し込みはこちら</div>
       <img src="../static/img/counsil.jpg" class="picture">
     </div>
   </div>
