--- a/pages/contact.html
+++ b/pages/contact.html
@@ -67,6 +67,9 @@
   .paragraph{text-align: center;
   background-color: #ffffff;}
   .spacer{background-color: #ffffff;}
+  .heroblue p{
+    white-space: nowrap;
+  }
 </style>
 <div class="spacer" style="height:15%;">
 </div>
