--- a/pages/event.html
+++ b/pages/event.html
@@ -291,12 +291,12 @@
       <div class="info">4/8(土) 10:40~12:20 （受付期間：3/26~3/31）</div>
       <div class="info">4/10(月) 13:10~14:50 （受付期間：4/1~4/5）</div>  
       <div class="info">4/12(水) 13:10~14:50 （受付期間：4/1~4/5）</div>
-      <div class="info">4/13(木) 13 :10~14:50 （受付期間：4/1~4/5）</div>
+      <div class="info">4/13(木) 13:10~14:50 （受付期間：4/1~4/5）</div>
       <div class="info">4/14(金) 15:05~16:45 （受付期間：4/1~4/5）</div>
       <div class="info">4/15(土) 10:40~12:20 （受付期間：4/1~4/5）</div>
       </div>
       <div class="info1">場所</div>
-      <div class="info">@学生会館</div>
+      <div class="info">@早稲田大学構内外</div>
       <div class="info1">お申し込みは<a href="https://forms.gle/zZFXG3p18ZV1kF9p6">こちら</a></div>
       <img src="../static/img/tour.jpg" class="picture">
     </div>
@@ -372,7 +372,7 @@
       <div class="info">4/14(金) 17:00～18:00, 19:00〜20:00（受付期間：4/1~4/5）</div>
       </div> 
       <div class="info1">場所</div>
-      <div class="info">@学生会館</div>
+      <div class="info">@Zoom</div>
       <div class="info1">お申し込みは<a href="https://forms.gle/fHnQ5ou3B4mLg8SZ6">こちら</a></div>
       <img src="../static/img/zemi.jpg" class="picture">
     </div>
@@ -397,7 +397,7 @@
       <div class="info">4/18(火) 17:00～18:00, 18:00～19:00, 19:00〜20:00, 20:00～21:00（受付期間：4/1~4/5）</div>
       </div>
       <div class="info1">場所</div>
-      <div class="info">@学生会館</div>
+      <div class="info">@Zoom</div>
       <div class="info1">お申し込みはこちら</div>
       <img src="../static/img/counsil.jpg" class="picture">
     </div>
