--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -138,7 +138,7 @@
     </div>
 
   <div class="contents">
-    毎週<strong>月</strong>曜日、<strong>木</strong>曜日の6限～
+    基本毎週<strong>月</strong>曜日、<strong>木</strong>曜日の6限～
     </div>
     <img class="box2-img" src="../static/img/box5.jpg">
 </div>
