--- a/pages/question.html
+++ b/pages/question.html
@@ -349,8 +349,8 @@ body{
   border-bottom: solid 3px #F7c4C6;
   margin-left: 20px;
 }
-.box{
-  width:55%;
+.accordion-area{
+  width: auto;
 }
 }
   </style>
