--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li class="gnav__menu__item"><a href="pages/aboutfes.html">早稲田祭とは</a></li>
                 <li class="gnav__menu__item"><a href="pages/aboutstaff.html">スタッフの内情</a></li>
                 <li class="gnav__menu__item"><a href="pages/aboutfes.html">局紹介</a></li>
-                <li class="gnav__menu__item"><a href="pages/overall.html">運営スタの全体像</a></li>
+                <li class="gnav__menu__item"><a href="pages/overall.html">運スタの全体像</a></li>
                 <li class="gnav__menu__item"><a href="pages/photogallery.html">運スタ写真館</a></li>
                 <li class="gnav__menu__item"><a href="pages/howto.html">入会方法</a></li>
                 <li class="gnav__menu__item"><a href="pages/event.html">新歓情報</a></li>
