--- a/pages/photogallery.html
+++ b/pages/photogallery.html
@@ -41,7 +41,7 @@
                 <li class="gnav__menu__item"><a href="aboutfes.html">早稲田祭とは</a></li>
                 <li class="gnav__menu__item"><a href="aboutstaff.html">スタッフの内情</a></li>
                 <li class="gnav__menu__item"><a href="introduce.html">局紹介</a></li>
-                <li class="gnav__menu__item"><a href="overall.html">運営スタの全体像</a></li>
+                <li class="gnav__menu__item"><a href="overall.html">運スタの全体像</a></li>
                 <li class="gnav__menu__item"><a href="photogallery.html">運スタ写真館</a></li>
                 <li class="gnav__menu__item"><a href="howto.html">入会方法</a></li>
                 <li class="gnav__menu__item"><a href="event.html">新歓情報</a></li>
