--- a/pages/howto.html
+++ b/pages/howto.html
@@ -36,7 +36,7 @@
                   <li class="gnav__menu__item"><a href="../index.html">Top</a></li>
                   <li class="gnav__menu__item"><a href="aboutus.html">運営スタッフとは</a></li>
                   <li class="gnav__menu__item"><a href="aboutfes.html">早稲田祭とは</a></li>
-                  <li class="gnav__menu__item"><a href="aboutstaff.html">スタッフの内情</a></li>
+                  <li class="gnav__menu__item"><a href="aboutstaff.html">運営スタッフのリアル</a></li>
                   <li class="gnav__menu__item"><a href="introduce.html">局紹介</a></li>
                   <li class="gnav__menu__item"><a href="overall.html">運スタの全体像</a></li>
                   <li class="gnav__menu__item"><a href="photogallery.html">運スタ写真館</a></li>
@@ -176,7 +176,7 @@
           <li><a href ="howto.html">入会方法</a>
           </li>
           <li><a href="aboutstaff.html">
-           スタッフの内情
+            運営スタッフのリアル
           </a></li>
           <li><a href="overall.html">運営スタッフ全体像</a></li>
         </ul>
