--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li class="gnav__menu__item"><a href="index.html">Top</a></li>
                 <li class="gnav__menu__item"><a href="pages/aboutus.html">運営スタッフとは</a></li>
                 <li class="gnav__menu__item"><a href="pages/aboutfes.html">早稲田祭とは</a></li>
-                <li class="gnav__menu__item"><a href="pages/aboutstaff.html">スタッフの内情</a></li>
+                <li class="gnav__menu__item"><a href="pages/aboutstaff.html">運営スタッフのリアル</a></li>
                 <li class="gnav__menu__item"><a href="pages/aboutfes.html">局紹介</a></li>
                 <li class="gnav__menu__item"><a href="pages/overall.html">運スタの全体像</a></li>
                 <li class="gnav__menu__item"><a href="pages/photogallery.html">運スタ写真館</a></li>
@@ -189,7 +189,7 @@
           <li><a href ="pages/howto.html">入会方法</a>
           </li>
           <li><a href="pages/aboutstaff.html">
-           スタッフの内情
+           運営スタッフのリアル
           </a></li>
           <li><a href="pages/overall.html">運営スタッフ全体像</a></li>
         </ul>
