うんスタみっけの日にち修正

--- a/pages/event.html
+++ b/pages/event.html
@@ -347,7 +347,7 @@
       <div class="info">4月6日(木) 10:40～12:20（受付期間：3月26日(日) 12:00～3月31日(金) 23:59）</div>  
       <div class="info">4月8日(土) 13:10～14:50（受付期間：3月26日(日) 12:00～3月31日(金) 23:59）
       </div>
-      <div class="info">4/9(日) 10:40~12:20（受付期間：3/26~3/31）</div>  
+      <div class="info">4月9日(日) 10:40～12:20（受付期間：3月26日(日) 12:00～3月31日(金) 23:59）</div>  
       <div class="info">4月12日(水) 15:05～16:45（受付期間：4月1日(土) 12:00～4月5日(水) 23:59）</div>
       <div class="info">4月13日(木) 15:05～16:45（受付期間：4月1日(土) 12:00～4月5日(水) 23:59）</div>
       </div>
